Fix: Middle bar still visible when menu is open

--- a/src/components/layout/navigation/MainNavigation.css
+++ b/src/components/layout/navigation/MainNavigation.css
@@ -140,7 +140,7 @@ button.underline-animated:hover {
 }
 
 .menu-icon.show .bar-middle {
-  transform: translateX(200%);
+  transform: translateX(250%);
 }
 
 .menu-icon.show .bar-bottom {
